--- a/force-app/main/default/classes/UpdateKnowledgeArticlesBatchTest.cls
+++ b/force-app/main/default/classes/UpdateKnowledgeArticlesBatchTest.cls
@@ -3,7 +3,7 @@ public class UpdateKnowledgeArticlesBatchTest {
     @isTest
     static void testBatchExecution() {
         // Not possible to create Data Category Group programmatically? It is required to insert Knowledge__DataCategorySelection.
-        // DataCategoryGroupName = 'Tema' and DataCategoryName = 'Helse' exists in org
+        // Presume DataCategoryGroupName = 'Tema' and DataCategoryName = 'Helse' exists in org
         List<Knowledge__kav> knowledgeArticles = new List<Knowledge__kav>();
         for (Integer i = 0; i < 3; i++) {
             Knowledge__kav article = new Knowledge__kav(
