trim and check only categoryselections where parent's version is latest

--- a/force-app/main/default/classes/UpdateKnowledgeArticlesBatch.cls
+++ b/force-app/main/default/classes/UpdateKnowledgeArticlesBatch.cls
@@ -1,13 +1,14 @@
 public class UpdateKnowledgeArticlesBatch implements Database.Batchable<sObject> {
+    private static Map<String, String> categoryLabelMap = KnowledgeDataCategoryHelper.fetchDataCategoryLabels();
+
     public Database.QueryLocator start(Database.BatchableContext BC) {
         // Get new Knowledge__DataCategorySelection records created the last 24 hours
         Datetime yesterday = Datetime.now().addDays(-1);
-        String soqlQuery = 'SELECT Id, ParentId, DataCategoryName FROM Knowledge__DataCategorySelection WHERE CreatedDate >= :yesterday';
+        String soqlQuery = 'SELECT Id, ParentId, DataCategoryName FROM Knowledge__DataCategorySelection WHERE CreatedDate >= :yesterday AND Parent.IsLatestVersion = TRUE';
         return Database.getQueryLocator(soqlQuery);
     }
 
     public void execute(Database.BatchableContext BC, List<Knowledge__DataCategorySelection> scope) {
-        Map<String, String> categoryLabelMap = KnowledgeDataCategoryHelper.fetchDataCategoryLabels();
         Map<Id, List<String>> articleCategoriesMap = new Map<Id, List<String>>();
 
         for (Knowledge__DataCategorySelection selection : scope) {
@@ -23,7 +24,7 @@ public class UpdateKnowledgeArticlesBatch implements Database.Batchable<sObject>
             String concatenatedCategories = String.join(articleCategoriesMap.get(articleId), ', ');
 
             Knowledge__kav article = new Knowledge__kav(Id = articleId);
-            article.NKS_Category__c = concatenatedCategories;
+            article.NKS_Category__c = concatenatedCategories.removeEnd(',').trim();
             articlesToUpdate.add(article);
         }
 
