--- a/force-app/main/default/classes/UpdateKnowledgeArticlesBatchTest.cls
+++ b/force-app/main/default/classes/UpdateKnowledgeArticlesBatchTest.cls
@@ -3,13 +3,14 @@ public class UpdateKnowledgeArticlesBatchTest {
     @isTest
     static void testBatchExecution() {
         // Not possible to create Data Category Group programmatically? It is required to insert Knowledge__DataCategorySelection.
-        // Presume DataCategoryGroupName = 'Tema' and DataCategoryName = 'Helse' exists in org
+        // Presume DataCategoryGroupName = 'Tema' and DataCategoryName = 'Dagpenger' and 'Sykepenger' exists in org
         List<Knowledge__kav> knowledgeArticles = new List<Knowledge__kav>();
         for (Integer i = 0; i < 3; i++) {
             Knowledge__kav article = new Knowledge__kav(
                 Title = 'Test Article ' + i,
                 UrlName = 'test-article-' + i,
-                Language = 'en_US'
+                Language = 'en_US',
+                NKS_Category__c = 'test'
             );
             knowledgeArticles.add(article);
         }
@@ -19,7 +20,17 @@ public class UpdateKnowledgeArticlesBatchTest {
         for (Knowledge__kav article : knowledgeArticles) {
             Knowledge__DataCategorySelection selection = new Knowledge__DataCategorySelection(
                 ParentId = article.Id,
-                DataCategoryName = 'Helse',
+                DataCategoryName = 'Sykepenger',
+                DataCategoryGroupName = 'Tema'
+            );
+            dataCategorySelections.add(selection);
+        }
+
+        // Add some more selections to same articles to see if database lock errors occur
+        for (Knowledge__kav article : knowledgeArticles) {
+            Knowledge__DataCategorySelection selection = new Knowledge__DataCategorySelection(
+                ParentId = article.Id,
+                DataCategoryName = 'Dagpenger',
                 DataCategoryGroupName = 'Tema'
             );
             dataCategorySelections.add(selection);
@@ -36,9 +47,15 @@ public class UpdateKnowledgeArticlesBatchTest {
             WHERE Id IN :knowledgeArticles
         ];
 
+        System.debug('updatedArticles: ' + updatedArticles);
         System.assertEquals(3, updatedArticles.size(), 'Number of updated articles should match test data');
         for (Knowledge__kav article : updatedArticles) {
             Assert.areNotEqual(null, article.NKS_Category__c, 'NKS_Category__c should not be null');
+            Assert.areEqual(
+                'test',
+                article.NKS_Category__c.substring(0, 4),
+                'NKS_Category__c first word should be "test"'
+            );
         }
     }
 }
